[mirotalk] - add stats endpoint
