# app/src/server.js
@@ -39,7 +39,7 @@ dependencies: {
  * @license For commercial use or closed source, contact us at license.mirotalk@gmail.com or purchase directly from CodeCanyon
  * @license CodeCanyon: https://codecanyon.net/item/mirotalk-p2p-webrtc-realtime-video-conferences/38376661
  * @author  Miroslav Pejic - miroslav.pejic.85@gmail.com
- * @version 1.4.12
+ * @version 1.4.13
  *
  */
 
@@ -711,6 +711,40 @@ app.get('/:roomId', (req, res) => {
     MiroTalk API v1
     For api docs we use: https://swagger.io/
 */
+
+// request stats list
+app.get([`${apiBasePath}/stats`], (req, res) => {
+    // Check if endpoint allowed
+    if (api_disabled.includes('stats')) {
+        return res.status(403).json({
+            error: 'This endpoint has been disabled. Please contact the administrator for further information.',
+        });
+    }
+    // check if user was authorized for the api call
+    const { host, authorization } = req.headers;
+    const api = new ServerApi(host, authorization, api_key_secret);
+    if (!api.isAuthorized()) {
+        log.debug('MiroTalk get stats - Unauthorized', {
+            header: req.headers,
+            body: req.body,
+        });
+        return res.status(403).json({ error: 'Unauthorized!' });
+    }
+    // Get stats
+    const { totalRooms, totalPeers } = api.getStats(peers);
+    res.json({
+        success: true,
+        totalRooms,
+        totalPeers,
+    });
+    // log.debug the output if all done
+    log.debug('MiroTalk get stats - Authorized', {
+        header: req.headers,
+        body: req.body,
+        totalRooms,
+        totalPeers,
+    });
+});
 
 // request token endpoint
 app.post([`${apiBasePath}/token`], (req, res) => {
